--- a/index.html
+++ b/index.html
@@ -18,31 +18,49 @@
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+
+  <!-- 高德地图 JS API -->
+  <script type="text/javascript">
+    window._AMapSecurityConfig = {
+      securityJsCode: 'b8ac2d236763f036688b843e1de70ca0',
+    }
+  </script>
+  <script
+    src="https://webapi.amap.com/maps?v=2.0&key=9e8264807bfc41a958e0d17aff56b146&plugin=AMap.MarkerCluster,AMap.Scale"></script>
   <script>
     tailwind.config = {
       darkMode: "class",
       theme: {
         extend: {
           colors: {
-            "primary": "#0f7ae6",
-            "primary-dark": "#0b5cb0",
-            "background-light": "#f6f7f8",
-            "background-dark": "#101922",
-            "surface-light": "#ffffff",
-            "surface-dark": "#1a2632",
-            "slate-dark": "#1e293b",
+            "primary": "#007AFF",
+            "primary-dark": "#0056CC",
+            "background-light": "#F2F2F7",
+            "background-dark": "#000000",
+            "glass-light": "rgba(255, 255, 255, 0.65)",
+            "glass-dark": "rgba(28, 28, 30, 0.65)",
+            "glass-border-light": "rgba(255, 255, 255, 0.4)",
+            "glass-border-dark": "rgba(255, 255, 255, 0.1)",
           },
           fontFamily: {
-            "display": ["Space Grotesk", "sans-serif"],
-            "body": ["Noto Sans", "sans-serif"]
+            "display": ["PingFang SC", "Microsoft YaHei", "Inter", "sans-serif"],
           },
-          borderRadius: { "DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "2xl": "1rem", "full": "9999px" },
+          borderRadius: {
+            "DEFAULT": "12px",
+            "lg": "14px",
+            "xl": "16px",
+            "2xl": "20px",
+            "3xl": "24px",
+            "full": "9999px"
+          },
           boxShadow: {
             "card": "0 2px 8px -2px rgba(0, 0, 0, 0.05), 0 0 4px -2px rgba(0, 0, 0, 0.02)",
+            "glass": "0 4px 30px rgba(0, 0, 0, 0.1)",
           },
           animation: {
             'slide-up': 'slide-up 0.3s cubic-bezier(0.16, 1, 0.3, 1) forwards',
             'fade-in': 'fadeIn 0.3s ease-out',
+            'float': 'float 10s infinite ease-in-out alternate',
           },
           keyframes: {
             'slide-up': {
@@ -52,6 +70,10 @@
             'fadeIn': {
               'from': { opacity: '0' },
               'to': { opacity: '1' }
+            },
+            'float': {
+              '0%': { transform: 'translate(0, 0)' },
+              '100%': { transform: 'translate(20px, 20px)' }
             }
           }
         },
@@ -98,6 +120,38 @@
       -webkit-tap-highlight-color: transparent;
     }
 
+    /* 玻璃拟态面板 */
+    .glass-panel {
+      background: rgba(255, 255, 255, 0.65);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
+      border: 1px solid rgba(255, 255, 255, 0.4);
+      transition: background-color 0.3s ease, border-color 0.3s ease;
+    }
+
+    .dark .glass-panel {
+      background: rgba(28, 28, 30, 0.65);
+      border-color: rgba(255, 255, 255, 0.1);
+    }
+
+    /* 背景装饰blob */
+    .blob {
+      position: absolute;
+      filter: blur(80px);
+      z-index: 0;
+      opacity: 0.6;
+      animation: float 10s infinite ease-in-out alternate;
+      pointer-events: none;
+    }
+
+    .animation-delay-2000 {
+      animation-delay: 2s;
+    }
+
+    .animation-delay-4000 {
+      animation-delay: 4s;
+    }
+
     /* Mobile simulator container for desktop */
     @media (min-width: 480px) {
       body {
@@ -124,15 +178,88 @@
         isolation: isolate;
       }
 
+      /* 模拟iOS状态栏 */
+      #root::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 44px;
+        background: inherit;
+        z-index: 9999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        pointer-events: none;
+      }
+
+      /* 状态栏内容 - 使用伪元素后的JS注入 */
+      .phone-status-bar {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 44px;
+        z-index: 9999;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 12px 24px 0;
+        font-size: 14px;
+        font-weight: 600;
+        pointer-events: none;
+        color: #1f2937;
+      }
+
+      .dark .phone-status-bar {
+        color: #f1f5f9;
+      }
+
+      .phone-status-bar .time {
+        flex: 1;
+      }
+
+      .phone-status-bar .notch {
+        width: 120px;
+        height: 28px;
+        background: #1f1f1f;
+        border-radius: 14px;
+        margin: 0 8px;
+      }
+
+      .phone-status-bar .icons {
+        flex: 1;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        gap: 4px;
+        font-size: 12px;
+      }
+
       #root>div {
         height: 100%;
         overflow-y: auto;
         overflow-x: hidden;
         position: relative;
+        padding-top: 44px;
+        /* 为状态栏预留空间 */
       }
 
       .dark #root {
         background: #101922;
+      }
+    }
+
+    /* 移动端真机不显示模拟状态栏 */
+    @media (max-width: 479px) {
+      .phone-status-bar {
+        display: none !important;
+      }
+
+      /* iOS安全区域适配 */
+      #root>div {
+        padding-top: env(safe-area-inset-top);
       }
     }
   </style>
@@ -151,7 +278,28 @@
 
 <body
   class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white font-body selection:bg-primary/20">
-  <div id="root"></div>
+  <div id="root">
+    <!-- 模拟手机状态栏 -->
+    <div class="phone-status-bar">
+      <span class="time">10:46</span>
+      <div class="notch"></div>
+      <div class="icons">
+        <svg width="16" height="12" viewBox="0 0 16 12" fill="currentColor">
+          <path d="M1 4h2v8H1V4zm4-2h2v10H5V2zm4 4h2v6H9V6zm4-6h2v12h-2V0z" />
+        </svg>
+        <svg width="16" height="12" viewBox="0 0 16 12" fill="currentColor">
+          <path
+            d="M8 2C4.5 2 1.5 4.5 0 8c1.5 3.5 4.5 6 8 6s6.5-2.5 8-6c-1.5-3.5-4.5-6-8-6zm0 10c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z" />
+        </svg>
+        <span>98%</span>
+        <svg width="22" height="12" viewBox="0 0 22 12" fill="currentColor">
+          <rect x="0" y="1" width="18" height="10" rx="2" fill="none" stroke="currentColor" stroke-width="1.5" />
+          <rect x="2" y="3" width="14" height="6" rx="1" />
+          <rect x="19" y="4" width="2" height="4" rx="0.5" />
+        </svg>
+      </div>
+    </div>
+  </div>
   <script type="module" src="/index.tsx"></script>
 </body>
 
